# opentrace

./: .env.example  .gitignore  .licenserc.yaml  404.html  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README-cmake.md  README.md  SECURITY.md  cliff-release.toml  cliff.toml  index.html  mkdocs.yml  sitemap.xml
agent/: CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
agent/.opentrace/: .gitignore
agent/src/opentrace_agent/: __init__.py  config.py  container.py  main.py  server.py  service.py
agent/src/opentrace_agent/agent/: __init__.py  graph.py  state.py
agent/src/opentrace_agent/benchmarks/: __init__.py  agent.py  graph_accuracy.py  swe_bench.py
agent/src/opentrace_agent/cli/: CLAUDE.md  __init__.py  _augment.py  api_client.py  augment.py  auth.py  bench.py  config.py  converter.py  credentials.py  diff.py  export_import.py  get_node.py  impact.py  main.py  mcp_server.py  serve.py  source_grep.py  source_search.py  traverse.py  wiki_cmd.py  workspace.py
agent/src/opentrace_agent/graph/: __init__.py  mapper.py  mcp_client.py  stream_mapper.py
agent/src/opentrace_agent/models/: __init__.py  base.py  nodes.py
agent/src/opentrace_agent/pipeline/: CLAUDE.md  __init__.py  adapters.py  pipeline.py  processing.py  resolving.py  saving.py  scanning.py  store.py  summarizing.py  symbol_graph.py  types.py
agent/src/opentrace_agent/serve/: __init__.py  server.py
agent/src/opentrace_agent/sources/: CLAUDE.md  __init__.py  base.py  registry.py
agent/src/opentrace_agent/store/: CLAUDE.md  __init__.py  constants.py  graph_store.py  kuzu_store.py
agent/src/opentrace_agent/summarizer/: CLAUDE.md  __init__.py  base.py  flan_t5.py
agent/src/opentrace_agent/wiki/: CLAUDE.md  __init__.py  index.py  llm.py  paths.py  slugify.py  vault.py
agent/tests/: conftest.py
agent/tests/fixtures/level1/: app.py
agent/tests/fixtures/level2/: app.py  models.py  service.py  validator.py
agent/tests/fixtures/level3/: client.py  go.mod  main.go  models.py
agent/tests/opentrace_agent/: test_container.py  test_init.py  test_service.py
ui/: .prettierignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  test-db.html  tsconfig.app.json  tsconfig.lib-app.json  tsconfig.lib.json  vite.config.lib.ts  vite.config.ts  vitest.config.ts
ui/e2e/: smoke.spec.ts
ui/public/: tree-sitter-bash.wasm  tree-sitter-c.wasm  tree-sitter-cpp.wasm  tree-sitter-go.wasm  tree-sitter-java.wasm  tree-sitter-json.wasm  tree-sitter-kotlin.wasm  tree-sitter-python.wasm  tree-sitter-ruby.wasm  tree-sitter-rust.wasm  tree-sitter-swift.wasm  tree-sitter-toml.wasm  tree-sitter-tsx.wasm  tree-sitter-typescript.wasm  web-tree-sitter.wasm
ui/public/wasm/: tree-sitter-rust.wasm  tree-sitter-swift.wasm  tree-sitter-toml.wasm
ui/scripts/: build-wasm.sh  generate-generic-fixtures.mjs  validate-build.mjs
ui/src/: App.css  App.tsx  OpenTraceApp.tsx  env.d.ts  huggingface-transformers.d.ts  kuzu-wasm.d.ts  lbug-wasm.d.ts  lib-app-entry.ts  main.tsx  test-db.ts
ui/src/__tests__/: mockStore.ts  setup.ts
ui/src/appComponents/: ChatPanel.css  ChatPanel.tsx  DiscoverPanelContainer.tsx  EdgeDetailsPanel.tsx  ExportModal.tsx  GraphControlsBar.tsx  GraphEmptyStates.tsx  GraphToolbarActions.tsx  GraphViewer.tsx  HelpDrawer.css  HelpDrawer.tsx  HelpMenuButton.tsx  HistoryPanel.css  HistoryPanel.tsx  IndexMetadataPanel.css  IndexMetadataPanel.tsx  JobMinimizedBar.css  JobMinimizedBar.tsx  NodeDetailsPanel.css  NodeDetailsPanel.tsx  OpenTraceLogo.css  OpenTraceLogo.tsx  PRDetailPanel.css  PRDetailPanel.tsx  PRListPanel.css  PhysicsPanelContainer.tsx  ResetConfirmModal.tsx  SettingsDrawer.css  SettingsDrawer.tsx  SidePanel.css  SidePanel.tsx  ThemeSelector.tsx  historyTypes.ts  index.ts  storeDataProvider.ts
ui/src/chat/: ChatParts.tsx  ChatTemplates.tsx  ChatThought.tsx  ChatToolCall.tsx  MermaidDiagram.css  MermaidDiagram.tsx  agent.ts  attachmentUtils.ts  chatHistory.ts  chatHistoryStore.ts  graphContext.ts  imageUtils.ts  markdown.css  markdownComponents.tsx  parts.css  prTools.ts  providers.ts  renderToolResult.tsx  storage.ts  subagents.ts  templates.ts  toolConfig.ts  toolConfig.tsx  tools.ts  types.ts  useConversation.ts  vaultTools.ts
ui/src/components/: AddRepoModal.css  AddRepoModal.tsx  ChatPanel.css  ChatPanel.tsx  DiscoverPanel.css  DiscoverPanel.tsx  DiscoverPanelContainer.tsx  EdgeDetailsPanel.css  EdgeDetailsPanel.tsx  FilterPanel.tsx  GraphViewer.tsx  IndexingProgress.tsx  JobMinimizedBar.css  JobMinimizedBar.tsx  NodeDetailsPanel.css  NodeDetailsPanel.tsx  OpenTraceLogo.tsx  PRDetailPanel.css  PRDetailPanel.tsx  PRListPanel.css  PRListPanel.tsx  PhysicsPanel.css  PhysicsPanel.tsx  PixiGraphCanvas.tsx  ResetConfirmModal.tsx  SettingsDrawer.css  SettingsDrawer.tsx  SidePanel.css  SidePanel.tsx  ThemeSelector.tsx  index.ts  providerIcons.tsx
ui/src/config/: animation.ts  embedding.ts  graphLayout.ts  summarization.ts  theme.ts
ui/src/graph/: LayoutPipeline.tsx  drawNodeHover.ts  noverlapWorker.ts  optimizeWorker.ts  spacingWorker.ts  types.ts  useCommunities.ts  useGraphFilters.ts  useGraphInstance.ts  useGraphVisuals.ts  useHighlights.ts
ui/src/hooks/: d3LayoutWorker.ts  useGraphData.ts  useGraphViewer.ts  useResizablePanel.ts  useSigmaGraph.ts  useTheme.ts
ui/src/job/: CLAUDE.md  browserJobService.ts  context.tsx  eventChannel.ts  index.ts  types.ts  useJobStream.ts
ui/src/lib/: GraphCanvas.tsx  index.ts
ui/src/pipeline/: CLAUDE.md  pipeline.ts  types.ts
ui/src/pr/: azuredevopsPR.ts  bitbucketPR.ts  client.ts  githubPR.ts  gitlabPR.ts  indexer.ts  reviewRunner.ts  types.ts
ui/src/providers/: GraphDataProvider.tsx  GraphInteractionProvider.tsx  graphFilterUtils.ts
ui/src/store/: CLAUDE.md  context.tsx  createLadybugStore.ts  createStore.ts  inMemoryStore.ts  index.ts  kuzuProtocol.ts  kuzuStore.ts  kuzuWorker.ts  ladybugStore.ts  serverStore.ts  types.ts
ui/src/styles/: index.css  theme.css
ui/src/types/: graph.ts
ui/src/wiki/: client.ts  types.ts
(+818 files in other folders)
