[project]
name = "opentraceai"
version = "0.1.0"
description = "OpenTrace Python agent — maps system architecture, code structure, and service relationships into a knowledge graph"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "OpenTrace Contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "langchain-core>=0.3",
    "langgraph>=0.2",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "mcp>=1.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "anyio>=4.0",
    "protobuf>=4.0",
    "grpcio>=1.60",
    "gitpython>=3.1",
    "tree-sitter>=0.24",
    "tree-sitter-python",
    "tree-sitter-typescript",
    "tree-sitter-go",
    "dependency-injector>=4.43",
    "click>=8.0",
]

[project.optional-dependencies]
kuzu = ["kuzu>=0.9"]
summarization = [
    "optimum[onnxruntime]>=1.17",
    "transformers>=4.38",
]

[project.urls]
Homepage = "https://github.com/opentrace/opentrace"
Repository = "https://github.com/opentrace/opentrace"
Issues = "https://github.com/opentrace/opentrace/issues"

[project.scripts]
opentrace = "opentrace_agent.cli.main:app"
opentrace-agent = "opentrace_agent.main:main"
opentrace-agent-server = "opentrace_agent.server:main"

[dependency-groups]
dev = ["pytest", "pytest-anyio", "pytest-httpx", "ruff", "grpcio-tools>=1.60"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opentrace_agent"]

[tool.ruff]
line-length = 120
exclude = ["src/opentrace_agent/gen"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
