[project]
name = "opentraceai"
version = "0.3.0"
description = "OpenTrace Python agent — maps system architecture, code structure, and service relationships into a knowledge graph"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "OpenTrace Contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "gitpython>=3.1",
    "tree-sitter>=0.24",
    "tree-sitter-python",
    "tree-sitter-typescript",
    "tree-sitter-go",
    "click>=8.0",
    "mcp>=1.0",
    "real-ladybug>=0.13",
]

[project.optional-dependencies]
summarization = [
    "optimum[onnxruntime]>=1.17",
    "transformers>=4.38",
]
swe-bench = [
    "anthropic>=0.40",
]

[project.urls]
Homepage = "https://github.com/opentrace/opentrace"
Repository = "https://github.com/opentrace/opentrace"
Issues = "https://github.com/opentrace/opentrace/issues"

[project.scripts]
opentrace = "opentrace_agent.cli.main:app"
opentraceai = "opentrace_agent.cli.main:app"
opentraceai-bench = "opentrace_agent.cli.bench:app"

[dependency-groups]
dev = ["pytest", "pytest-anyio", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opentrace_agent"]

[tool.ruff]
line-length = 120
exclude = []

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
